# react_demo_django_app

./: MANIFEST.in  README.md  setup.cfg
frontend/: package.json
frontend/config/: paths.js  webpack.config.js
react_demo_django_app/: apps.py  urls.py  views.py
react_demo_django_app/static/react_demo_django_app/: README.md
react_demo_django_app/templates/react_demo_django_app/: demo.html
